2008-08-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/egg/toolpalette/eggtoolitemgroup.c:
	* glom/utility_widgets/egg/toolpalette/eggtoolitemgroup.h:
	* glom/utility_widgets/egg/toolpalette/eggtoolpalette.c:
	* glom/utility_widgets/egg/toolpalette/eggtoolpalette.h:
	* glom/utility_widgets/egg/toolpalette/eggtoolpaletteprivate.h:
	* glom/utility_widgets/egg/toolpalette/testtoolpalette.c: Updated from libegg.
	* glom/utility_widgets/sidebar.cc:
	* glom/utility_widgets/sidebar.h: Fixed the whitespace.
	set_drag_source(): Added the extra parameter for the call to 
	egg_tool_palette_set_drag_source().

2008-08-15  Armin Burgmeier  <armin@openismus.com>

	* win32/build_installer:
	* win32/glom.iss.in: We use self-built postgresql binaries again, so
	we don't need to ship all the libraries the official ones are built
	against.

2008-08-12  Armin Burgmeier  <armin@openismus.com>

	* win32/build_installer: Take a revision number as argument, producing
	for instance glom-setup-1.7.1-2.exe.

	* win32/glom.iss.in: Hide the components page, since all components
	are fixed anyway.

	* README: Added some general information on how the installer is
	built.

2008-08-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/utils.cc:
	* glom/libglom/utils.h: show_help() Add a note that this is a replacement 
	for gnome_help_display() until we have something in GTK+.

2008-08-11  Armin Burgmeier  <armin@openismus.com>

	* win32/build_installer:
	* win32/glom.iss.in: Added libeay32.dll and ssleay32.dll to the
	installer. These seem to be required for libpq.dll, which is in turn
	required by the libgda postgres provider.

2008-08-05  Armin Burgmeier  <armin@openismus.com>

	* win32/build-installer:
	* win32/glom.iss.in:
	* win32/querymodules.bat: Updated to fit my new build setup. 

2008-08-05  Armin Burgmeier  <armin@openismus.com>

	* glom/dialog_existing_or_new.cc: Changed the path where the example